cin bug to patch

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -2,8 +2,9 @@ NAME		= 	phonebook
 SRCS_DIR	= 	source/
 SRCS		=	main.cpp
 SRCS		+=	Contact.cpp
+SRCS		+=	Phonebook.cpp
 CC			= 	clang++
-CFLAGS		= 	-Wall -Werror -Wextra
+CFLAGS		= 	-Wall -Werror -Wextra -std=c++98
 OBJS_DIR	= 	$(SRCS_DIR)objs/
 OBJS		= 	 $(addprefix $(OBJS_DIR), $(SRCS:.cpp=.o))
 INC_DIR 	=	include
